--- a/templates/gift.html
+++ b/templates/gift.html
@@ -57,7 +57,7 @@
             <div class="col-md-7 mx-auto text-center" data-aos="fade-up">
               <h1>{{ prod_name }}</h1>
             {% if director is not None %}
-              <p>Endorsed by {{director|safe}}!</p>
+              <p>Endorsed by {{director}}!</p>
             {% else %}
               <p> For all your card buying needs! </p>
             {% endif %}
@@ -75,6 +75,8 @@
                   Price: <strong class="text-black">{{ price }}</strong> <br>
                 </p>
                 {% if user is None %}
+                <!-- ************-----------ADDED CSRF TOKEN-----------************ -->
+                <!-- {% csrf_token %} -->
                 <form action="/gift/{{ prod_num }}" method="post">
                   <div class="mb-4">
                     <input type="text" class="form-control mb-2" name="amount" id="amount" placeholder="$0.00">
