--- a/templates/item-single.html
+++ b/templates/item-single.html
@@ -59,7 +59,7 @@
             {% if director is not None %}
               <!-- KG: I don't think the safe tag does what they thought
                    it does... -->
-              <p>Endorsed by {{director|safe}}!</p>
+              <p>Endorsed by {{director}}!</p>
             {% else %}
               <p> For all your card buying needs! </p>
             {% endif %}
@@ -76,12 +76,14 @@
                 <p>
                   Price: <strong class="text-black">{{ price }}</strong> <br>
                 </p>
+                <!-- **--ADDED CSRF TOKEN--** -->
+                <!-- {% csrf_token %} -->
                 <form action="/buy/{{ prod_num }}" method="post">
                   <div class="mb-4">
                     <input type="text" class="form-control mb-2" placeholder="$0.00" name="amount">
                     <button class="btn btn-block" type="submit">Buy one</button>
-                    {% csrf_token %}
-                </form>
+                    <!-- {% csrf_token %} -->
+                  </form>
                 <span class="d-block text-center my-2">or</span>
                 <a href="/gift/{{ prod_num }}"><center>Gift one</center></a>
               </div>
